# computer-vision

./: .gitignore  CMakeLists.txt  COPYING.txt  COPYING.txt.tmp  README.md  build.sh  computer-vision.cfg  main.cpp
RTOR/: RTOR.cpp  RTOR.h  frame.cpp  frame.h  globals.cpp  globals.h  main.cpp
cmake/Modules/: FindDeckLinkSDK.cmake
html/: ComPtr_8h_source.html  DeckLinkCapture_8h_source.html  DeckLinkInputCallback_8h_source.html  DeckLinkOpenCv_8h_source.html  annotated.html  area__calculator_8h_source.html  benchmark_8cpp.html  benchmark_8cpp__incl.map  benchmark_8cpp__incl.md5  benchmark_8h.html  benchmark_8h__dep__incl.map  benchmark_8h__dep__incl.md5  benchmark_8h__incl.map  benchmark_8h__incl.md5  benchmark_8h_source.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h_source.html  canny__contour__creator_8h_source.html  classCamera-members.html  classCamera.html  classCamera__coll__graph.md5  classCannyContourCreator-members.html  classCannyContourCreator.html  classCannyContourCreator__coll__graph.dot  classCannyContourCreator__coll__graph.map  classCannyContourCreator__coll__graph.md5  classCannyContourCreator__inherit__graph.map  classCannyContourCreator__inherit__graph.md5  classComPtr-members.html  classComPtr.html  classComPtr__coll__graph.map  classComPtr__coll__graph.md5  classComPtr__inherit__graph.md5  classCommand-members.html  classCommand.html  classCommand__coll__graph.md5  classContourCreator-members.html  classContourCreator.html  (+926 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+27 more)
include/: frame.h  metadata.h  pixel_target.h  target.h
include/CSV-creator/: .*  csv.h
include/area-calculator/: area_calculator.h
include/csv-creator/: csv.h
include/google-maps-matcher/: .*  gmaps_matcher.h
include/image-metadata-matcher/: .*  metadata_matcher.h
include/report-generator/: report_generator.h
include/target-analysis/: target_analyzer.h
include/target-identification/: .*  object_detector.h  target_identifier.h
include/volume-calculation/: volume_calc.h
modules/core/: CMakeLists.txt
modules/core/include/: benchmark.h  camera.h  frame.h  metadata.h  object.h  pixel_object.h  pixel_target.h  settings.h  target.h  test.h
modules/core/src/: benchmark.cpp  camera.cpp  frame.cpp  object.cpp  pixel_object.cpp  pixel_target.cpp  settings.cpp  target.cpp  test.cpp
modules/csvcreator/: CMakeLists.txt
modules/csvcreator/include/: csv.h
modules/csvcreator/src/: csv.cpp
modules/gmapsmatcher/: CMakeLists.txt
modules/gmapsmatcher/include/: gmaps_matcher.h
modules/imgimport/: CMakeLists.txt  CMakeLists.txt~
modules/imgimport/include/: ComPtr.h  DeckLinkCapture.h  DeckLinkInputCallback.h  DeckLinkOpenCv.h  csvreading.h  decklink_import.h  imgimport.h  imgimport.h~  importer.h  metadata_input.h  metadata_reader.h  pictureimport.h  video_import.h  vidimport.h
modules/imgimport/src/: DeckLinkCapture.cpp  DeckLinkInputCallback.cpp  DeckLinkOpenCv.cpp  Testcsv.csv  Testcsv.csv~  csvreading.cpp  csvreading.cpp~  decklink_import.cpp  imgimport.cpp  imgimport.cpp~  importer.cpp  jpegimport.cpp~  metadata_input.cpp  metadata_reader.cpp  pictureimport.cpp  testcsv.csv  testmain.cpp  testmain.cpp~  video_import.cpp  vidimport.cpp
modules/imgimport/test/: CMakeLists.txt  csv_test.cpp  main.cpp  manual_calibration.cpp  picture_test.cpp  test.cpp  video_test.cpp
modules/reportgen/: CMakeLists.txt
modules/reportgen/include/: report_generator.h
modules/targetanalysis/: CMakeLists.txt
modules/targetanalysis/include/: object_list.h  pixel_object_list.h  target_analyzer.h  target_loader.h
modules/targetanalysis/src/: object_list.cpp  pixel_object_list.cpp  target_analyzer.cpp  target_loader.cpp
modules/targetanalysis/test/: CMakeLists.txt  gps_point_test.cpp  test.cpp  unique_po_test.cpp
modules/targetid/: CMakeLists.txt  CMakeLists.txt~
modules/targetid/include/: canny_contour_creator.h  contour_comparison.h  contour_creator.h  contour_filter.h  filter.h  goose_filter.h  histogram.h  k_means_filter.h  object_detector.h  qr_identifier.h  target_identifier.h
modules/targetid/src/: canny_contour_creator.cpp  contour_comparison.cpp  filter.cpp  goose_filter.cpp  histogram.cpp  k_means_filter.cpp  object_detector.cpp  qr_identifier.cpp  target_identifier.cpp
modules/targetid/test/: CMakeLists.txt  hist_test.cpp  interactive.cpp  qr_test.cpp  test.cpp
modules/volumecalc/: CMakeLists.txt
modules/volumecalc/include/: volume_calc.h
pystitch/test/: composite.bat
src/CSV-creator/: CMakeLists.txt  README.md
src/area-calculator/: .*  README.md
src/google-maps-matcher/: CMakeLists.txt
src/image-2-data-matcher/: README.md
src/image-metadata-matcher/: CMakeLists.txt
src/report-generator/: .*  CMakeLists.txt
src/target-analysis/: CMakeLists.txt  README.md
src/target-identification/: CMakeLists.txt  README.md  object_detector.cpp  target_identifier.cpp
src/volume-calculation/: .*  CMakeLists.txt
testdata/: .~lock.test_csv.csv#  pictureimport_test_csv.csv  sample.json  test_csv.csv
warg-exif/: main.cpp  warg-exiv.py
warg-qr/: main.cpp
