include_directories(include ../core/include)
ADD_DEFINITIONS("-DBOOST_LOG_DYN_LINK")
add_library(TargetAnalysis src/area_analyzer.cpp src/target_analyzer.cpp src/target_loader.cpp)
target_link_libraries(TargetAnalysis ${Boost_LIBRARIES} Core)
target_compile_features(TargetAnalysis PRIVATE)
add_subdirectory("test")
